@@ -25,14 +25,20 @@ t/305-api_cache_time.t
 t/310-api_cache.t
 t/315-api_cache_clear.t
 t/400-api_attempts.t
-t/900-endpoints.t
+t/500-api.t
+t/510-api_with_cache.t
+t/515-tesla_api_call.t
+t/900-new.t
+t/903-endpoints.t
 t/905-option_codes.t
 t/910-api_unauth.t
 t/915-_decode.t
+t/925-update_data_files.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
 t/test_data/endpoints.json
 t/test_data/option_codes.json
 t/test_data/test_data.json
+t/TestResponse.pm
 t/TestSuite.pm
